fix: clone api doesn't take update configurations
